# Ugolki

./: CMakeLists.txt  CPlayer.cpp  CPlayer.h  CStartupDlg.cpp  CStartupDlg.h  CellType.h  Doxyfile  Doxyfile.bak  HPlayer.cpp  HPlayer.h  MFCUgolkiTest.cpp  MFCUgolkiTest.h  MFCUgolkiTest.rc  MFCUgolkiTestDlg.cpp  MFCUgolkiTestDlg.h  MonteCarloEvaluator.cpp  MonteCarloEvaluator.h  README.md  RPlayer.cpp  RPlayer.h  UPlayer.cpp  UPlayer.h  UgolkiField.cpp  UgolkiField.h  ai.cpp  ai.h  build.bat  corners_sfml.cpp  framework.h  index.html  main.cpp  pch.h  resource.h  test_board.cpp  test_checkWin.cpp  test_distanceToCorner.cpp  test_drawBoard.cpp  test_isValidMove.cpp  test_resetGame.cpp
res/: MFCUgolkiTest.rc2
